2021-11-03  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: make overlay/underlay work on a page with no resource
	dictionary. Fixes #527.

2021-11-02  Jay Berkenbilt  <ejb@ql.org>

	* Add QPDF::findPage to the public API. This is primarily to help
	improve the efficiency of code that wraps the qpdf library, such
	as pikepdf. Fixes #516.

	* zlib-flate: warn and exit with code 3 when there is corrupted
	input data even when decompression is possible. We do this in the
	zlib-flate CLI so that it can be more reliably used to test the
	validity of zlib streams, but we don't warn by default in qpdf
	itself because PDF files in the wild exist with this problem and
	other readers appear to tolerate it. There is a PDF in the qpdf
	test suite (form-filled-by-acrobat.pdf) that was written by a
	version of Adobe Acrobat that exhibits this problem. Fixes #562.

	* Add Pl_Flate::setWarnCallback to make it possible to be notified
	of data errors that are recoverable but still indicate invalid
	data.

	* Improve error reporting when someone forgets the -- after
	--pages. Fixes #555.

2021-05-12  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: ensure we don't overflow any string bounds while
	handling completion, even when we are given bogus input values.
	Fixes #441.

2021-05-09  Jay Berkenbilt  <ejb@ql.org>

	* Improve performance of preservation of object streams by
	avoiding unnecessary traversal of objects when there are no object
	streams.

2021-05-08  Jay Berkenbilt  <ejb@ql.org>

	* 10.3.2: release

	* Fix problem that caused the generated manual from being included
	in the Windows distributions. Fixes #521.

	* Fix 11-year-old bug of leaving unreferenced objects in preserved
	object streams. Fixes #520.

2021-04-17  Jay Berkenbilt  <ejb@ql.org>

	* Portability fix: use tm_gmtoff rather than global timezone
	variable if available to get timezone offset. This fixes
	compilation on BSD and also results in a daylight saving
	time-aware offset for Linux or other GNU systems. Fixes #515.
